# jigsmith

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  sections.json
.claude/skills/build-profile/: SKILL.md
.claude/skills/dispose-jig/: SKILL.md
.claude/skills/forge-component/: SKILL.md
.claude/skills/forge-jig/: SKILL.md
.claude/skills/jigsmith-ground-rules/: SKILL.md
.claude/skills/register-agent/: SKILL.md
.claude/skills/register-shell/: SKILL.md
.claude/skills/run-miner/: SKILL.md
.claude/skills/scanner/: SKILL.md
.claude/skills/tend-workbench/: SKILL.md
core/: __init__.py  __main__.py  events.py  helpers.py  ingest.py  mine.py  run.py  sections.py  timing.py
core/agents/: __init__.py  manifest.py
core/agents/builtin/: claude.json  codex.json  opencode.json
core/inventory/: __init__.py  configs.py  packages.py
core/parsers/: __init__.py  claude_jsonl.py  openai_jsonl.py  opencode_db.py  opencode_store.py  shell_history.py
core/scan/: __init__.py  shape.py
core/signals/: __init__.py  context.py  harness.py  loop.py  sessions.py  shell.py  usage.py
core/store/: __init__.py  db.py  rack.py  settings.py
knowledge/: context.md  forge.md  harness.md  loop.md  sessions.md  shell.md  usage.md
tests/: test_scan_shape.py
tui/: __init__.py  __main__.py  app.py  jigsmith.tcss  theme.py
tui/config/: __init__.py  profile.json
tui/data/: store.py
tui/panels/: __init__.py  components.py  contract.py
tui/panels/forged/: __init__.py  (+3 more)
tui/screens/: config.py  forge.py  home.py  pipeline.py  profile.py  workbench.py
