[project]
name = "jigsmith"
version = "0.2.0"
description = "A self-revising toolsmith for agent-driven development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0",
]

[project.scripts]
jigsmith = "tui.__main__:main"
jigsmith-mine = "core.mine:main"

[dependency-groups]
dev = [
    "textual-dev>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tui", "core"]
